[package]
name = "instrumented-stepanov"
version = "1.1.2"
authors = ["Strahinja Popovic <stralep@gmail.com>"]
edition = "2018"

description = """
InstrumentedBase is collecting data about number of new, clone, drop, eq, partial cmp and cmp from Instrumented instates.
"""

readme = "README.md"
repository = "https://github.com/letac/instrumented-stepanov"
license = "Apache-2.0"
keywords = ["testing", "test"]

[[bin]]
name = "instrumented"

[dependencies]
rand = {version = "0.6.*"}
prettytable-rs = "0.8.0"
